--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "wordpress-gutenberg-snippets",
     "displayName": "WordPress Gutenberg Snippets",
     "description": "Collection of WordPress Gutenberg Snippets",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "publisher": "BenjaminZekavica",
     "author": {
         "name": "Benjamin Zekavica"
@@ -12,36 +12,36 @@
         "theme": "dark"
     },
     "icon": "images/icon.png",
-    "homepage": "https://www.benjamin-zekavica.de", 
+    "homepage": "https://www.benjamin-zekavica.de",
     "bugs": {
         "url": "https://www.benjamin-zekavica.de",
         "email": "info@benjamin-zekavica.de"
     },
-    "repository": "https://github.com/BenjaminZekavica/WordPressGutenberg-Snippets",
+    "repository": "https://github.com/bz-projects/WordPress-Gutenberg-Snippets",
     "engines": {
         "vscode": "^1.37.0"
     },
-    "categories": ["Snippets"],
+    "categories": [
+        "Snippets"
+    ],
     "contributes": {
         "snippets": [
             {
                 "language": "javascript",
                 "path": "./snippets/wp-components.json"
-            }, 
+            },
             {
                 "language": "javascript",
                 "path": "./snippets/wp-blocks.json"
-            }, 
-
+            },
             {
                 "language": "javascript",
                 "path": "./snippets/wp-block-editor.json"
-            }, 
-
+            },
             {
                 "language": "javascript",
                 "path": "./snippets/wp-guteberg-js.json"
-            }, 
+            },
             {
                 "language": "php",
                 "path": "./snippets/wp-gutenberg-php.json"
